--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 :root{
     --black: black;
+    --white: white;
     --bg-image: url('https://i.postimg.cc/zBqkDfsj/world-wide-web-7109276-640.webp');
     --transparentBlack1: rgba(124, 124, 124, 0.124);
     --transparentBlack2: rgba(0, 0, 0, 0.593);
@@ -13,6 +15,7 @@
     --logoGradient: rgba(175, 196, 220, 0.496);
     --babyBlue: rgba(0, 132, 255, 0.421);
     --darkBlue:rgb(3, 3, 74);
+    --NavColor: rgb(0, 110, 255);
 }
 
 body{
@@ -63,15 +66,47 @@ body{
 }
 
 
+@keyframes popup {
+    0% {
+        transform: translateY(100px);
+    }
+    25% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(100px);
+    }
+    75% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(100px);
+    }
+}
+
+
+#greeting{
+    transform: translateY(100px);
+    color: var(--white);
+    position: relative;
+    animation-name: popup;
+    animation-duration: 1s;
+    animation-delay: 0.8s;
+    animation-iteration-count: 1;
+    transition: 1s ease-in-out;
+}
+
 
 /* Nav features */
 .nav-container{
     transform: translateY(200px);
+    position: sticky;
+    /* background-color: aliceblue;
+    margin-right: 900px; */
 }
 
 .nav-icon{
-    margin-top: 40px;
-    background-color: var(--babyBlue);
+    background-color: var(--NavColor);
     height: 40px;
     text-align: end;
     padding: 10px;
@@ -80,22 +115,35 @@ body{
     border-bottom-right-radius: 10px;
 }
 
+
 #HomePage:hover{
     transition: 0.5s ease-in-out;
-    transform: translateX(-93%);
+    transform: translateX(-96%);
+}
+
+#AboutPage{
+    margin-top: 40px;
 }
 
 #AboutPage:hover{
     transition: 0.5s ease-in-out;
-    transform: translateX(-93%);
+    transform: translateX(-96%);
+}
+
+#ContactPage{
+    margin-top: 40px;
 }
 
 #ContactPage:hover{
     transition: 0.5s ease-in-out;
-    transform: translateX(-93%);
+    transform: translateX(-96%);
+}
+
+#ProjectsPage{
+    margin-top: 40px;
 }
 
 #ProjectsPage:hover{
     transition: 0.5s ease-in-out;
-    transform: translateX(-93%);
+    transform: translateX(-96%);
 }
