--- a/style.css
+++ b/style.css
@@ -104,10 +104,9 @@ body{
 }
 
 .img-img{
-   background-image: url('https://i.postimg.cc/26wyDL97/20231009-135619.jpg');
-   height: 400px;
-   width: 400px;
-   border-radius: 50%;
+   height: 300px;
+   width: 300px;
+   border-radius: 40px;
    border: 5px solid var(--logoGradient);
    filter: grayscale(70%);
 }
@@ -133,9 +132,8 @@ body{
 
 /* Nav features */
 .nav-container{
-    transform: translateY(-275px);
+    transform: translateY(-150px);
     position: fixed;
-    perspective: 1000px;
 }
 
 .nav-icon{
@@ -195,11 +193,29 @@ body{
 .box{
     display: flex;
     justify-content: center;
+    position: sticky;
     border-radius: 10px;
     height: 100px;
     width: 500px;
     background: radial-gradient(circle, var(--logoGradient) 50%,  var(--transparentWhite) 100%);
 }
+
+.dropdown{
+  transform: translateY(-139px);
+  background-color: black;
+  margin-left: 50px;
+  margin-right: 50px;
+  
+}
+.dropdown:hover{
+  transform: translateY(0px);
+  transition: 2s ease-in;
+  border-left: 1px solid var(--white);
+  border-right: 1px solid var(--white);
+  border-bottom: 1px solid var(--white);
+  box-shadow: 0px 0px 20px rgba(5, 218, 237, 0.413), 0px 5px 5px -1px rgba(79, 99, 132, 0.25), inset 4px 4px 8px rgba(31, 28, 0, 0.5), inset -4px -4px 8px rgba(20, 34, 225, 0.719);
+}
+
 
 .icon-img{
     height: 60px;
